scripts/nullaway/annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8.txt
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/StateMachine.java:10: error: [NullAway] initializer method does not guarantee @NonNull fields current (line 6), previous (line 7) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public StateMachine(T owner) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/troll/Troll.java:8: error: [NullAway] dereferenced expression state is @Nullable
        state.execute(this);
             ^
    (see http://t.uber.com/nullaway )
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/StateMachine.java:11: error: [NullAway] initializer method does not guarantee @NonNull fields current (line 7), previous (line 8) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public StateMachine(T owner) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/StateMachine.java:10: error: [NullAway] initializer method does not guarantee @NonNull fields current (line 6), previous (line 7) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public StateMachine(T owner) {
           ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
4 errors
